<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PacientesApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tituloApp">Sistema de monitoreo de Diabetes</string>
    <string name="btnPacientes">Pacientes</string>
    <string name="btnGlucosa">Glucosa</string>
    <string name="btnHistorial">Historial</string>
    <string name="btnAcercaDe">Acerca de...</string>
    <string name="title_activity_pacientes">Pacientes</string>
    <string name="tituloPacientes">Datos del paciente</string>
    <string name="txtNombre">Nombre:</string>
    <string name="txtEdad">Edad:</string>
    <string name="txtSexo">Sexo:</string>
    <string name="txtTipoSangre">Tipo de sangre:</string>
    <string name="txtPeso">Peso:</string>
    <string name="txtAltura">Altura:</string>
    <string name="btnGuardarPaciente">Guardar datos</string>

    <string-array name="sexo_list">
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>
    <string-array name="tipo_sangre_list">
        <item>O+</item>
        <item>O-</item>
        <item>RH-</item>
        <item>A</item>
        <item>B</item>
    </string-array>

    <string name="title_activity_glucosa">Glucosa</string>
    <string name="tituloGlucosa">Glucosa en la sangre</string>
    <string name="lblGlucosa">Glucosa:</string>
    <string name="lblTiempo">Tiempo:</string>
    <string name="btnGuardar">Guardar</string>
    <string name="txtPresion">Presión Arterial</string>

    <string-array name="tiempo_glucosa_list">
        <item>Antes del desayuno</item>
        <item>Antes de la comida</item>
        <item>Antes de la cena</item>
        <item>Antes de dormir</item>
    </string-array>

    <string name="title_activity_presion_arterial">PresionArterial</string>
    <string name="txtTituloPresion"></string>
    <string name="txtTituPresion">Presión arterial</string>
    <string name="chkDerecho">Brazo derecho</string>
    <string name="chkIzquierdo">Brazo izquierdo</string>
    <string name="btnHora">Hora chequeo</string>
    <string name="btnFecha">Fecha chequeo</string>
    <string name="btnGuardarPresion">Guardar presion arterial</string>
    <string name="lblSistolica">Sistólica:</string>
    <string name="lblDiastolica">Diastólica:</string>
    <string name="lblBrazo">Brazo del que se tomo la muestra:</string>
    <string name="title_activity_historial">Historial</string>
    <string name="lblHistorial">Historial del paciente</string>
    <string name="title_activity_acerca_de">AcercaDe</string>
    <string name="lblAcercaDe">Aplicación desarrollada por: ISC. Sinesio Ivan Carrillo Heredia. LI. Emiliano Anastasio Landa </string>

</resources>
