<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dip"
    tools:context="com.lania.pacientesapp.app.PresionArterial">

    <TextView
        android:text="@string/txtTituPresion"
        android:textSize="25sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblSistolica"
        android:id="@+id/textView"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@id/txtSistolica"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentRight="true"
        android:phoneNumber="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblDiastolica"
        android:id="@+id/textView3"
        android:layout_below="@id/txtSistolica"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="36dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@id/txtDiastonica"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@id/txtSistolica" />



    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:id="@id/rGarm">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/chkIzq"
            android:text="@string/chkIzquierdo"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/chkDer"
            android:text="@string/chkDerecho"/>
        </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnHora"
        android:id="@id/btnHora"
        android:layout_below="@id/rGarm"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="42dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnFecha"
        android:id="@id/btnFecha"
        android:layout_alignTop="@id/btnHora"
        android:layout_alignRight="@id/txtDiastonica" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnGuardarPresion"
        android:id="@id/btnSavePresion"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp" />

</RelativeLayout>
