<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dip"
    android:orientation="vertical"
    tools:context="com.lania.pacientesapp.app.Pacientes">

    <TextView
        android:text="@string/tituloPacientes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:id="@id/txtPaciente"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNombre"
        android:textSize="18sp"
        android:id="@+id/textView"
        android:layout_below="@id/txtPaciente"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtEdad"
        android:textSize="18sp"
        android:id="@+id/textView2"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@id/editNombre"
        android:inputType="text"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@id/editEdad"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtSexo"
        android:textSize="18sp"
        android:id="@+id/textView3"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/textView2"
        android:layout_alignRight="@+id/textView2" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@id/spnSexo"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@id/spnTipoSangre"
        android:entries="@array/sexo_list"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTipoSangre"
        android:textSize="18sp"
        android:id="@+id/textView4"
        android:layout_below="@id/spnSexo"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@id/spnSexo" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@id/spnTipoSangre"
        android:layout_alignTop="@+id/textView4"
        android:layout_toRightOf="@+id/textView"
        android:entries="@array/tipo_sangre_list"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPeso"
        android:textSize="18sp"
        android:id="@+id/textView5"
        android:layout_marginTop="29dp"
        android:layout_below="@id/spnTipoSangre"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@id/editPeso"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@id/spnTipoSangre" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAltura"
        android:textSize="18sp"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="24dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@id/editAltura"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@id/editPeso" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnGuardarPaciente"
        android:id="@id/btnGuardarPaciente"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
